<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".presentation.detail.DetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="true"
            android:background="@color/shadow"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginBottom="94dp"
            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
            app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/title" />
            </RelativeLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@color/shadow"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@color/shadowTitle"
                app:cardElevation="4dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/ratings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/duration"
                        android:textSize="14sp"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/rating"
                        android:textSize="14sp"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <View
                        android:id="@+id/view1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/shadow"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <TextView
                        android:id="@+id/durations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/duration"
                        android:textSize="14sp"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/rating"
                        android:textSize="14sp"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/shadow"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <TextView
                        android:id="@+id/genres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/duration"
                        android:textSize="14sp"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/rating"
                        android:textSize="14sp"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <View
                        android:id="@+id/view3"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/shadow"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <TextView
                        android:id="@+id/broadcasts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/duration"
                        android:textSize="14sp"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <TextView
                        android:id="@+id/broadcast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/rating"
                        android:textSize="14sp"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <View
                        android:id="@+id/view4"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/shadow"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <TextView
                        android:id="@+id/reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/duration"
                        android:textSize="14sp"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <TextView
                        android:id="@+id/review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/rating"
                        android:textSize="14sp"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <View
                        android:id="@+id/view5"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/shadow"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <TextView
                        android:id="@+id/descriptions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/duration"
                        android:textSize="14sp"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:textColor="@color/transparent"
                        android:background="@color/shadow"
                        android:text="@string/rating"
                        android:textSize="14sp"
                        app:layout_collapseMode="parallax"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchorGravity="top|right|end"
        app:layout_anchor="@id/cardView"
        android:layout_margin="16dp"
        android:src="@drawable/ic_action_favorite_off"
        android:visibility="gone"
        android:contentDescription="@string/favourite" />
    <View
        android:id="@+id/white_views"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pureWhite"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/loadings"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indeterminate="true"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>